--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title> Upload files </title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
 <h1>Upload Files</h1>
@@ -12,8 +13,12 @@
     <h2>Selected Files for Upload</h2>
     <ul id="fileList"></ul>
 </div>
+<div id="notification" class="alert alert-success mt-2" style="display: none;">
+    <!--notification -->
+</div>
 <script>
     let selectedFiles = [];
+    const notification = document.getElementById('notification');
     
     // Handle file selection
     document.getElementById('fileInput').addEventListener('change', function(event) {
@@ -46,15 +51,23 @@
             });
             
             if (response.ok) {
-                alert("Files uploaded successfully!");
+                notification.style.display = 'block';
+                notification.className = 'alert alert-success mt-2';
+                notification.innerHTML = `<p>Files uploaded successfully!</p>`;
                 selectedFiles = []; // Clear selected files
                 updateFileList();
+                window.location.href = '/files';
             } else {
-                alert("Failed to upload files.");
+                notification.style.display = 'block';
+                notification.className = 'alert alert-danger mt-2';
+                notification.innerHTML = `<p>Failed to upload files.</p>`;
+                selectedFiles = [];
             }
         } catch (error) {
             console.error('Error uploading files:', error);
-            alert("Failed to upload files.");
+            notification.style.display = 'block';
+            notification.className = 'alert alert-danger mt-2';
+            notification.innerHTML = `<p>Failed to upload files.</p>`;
         }
     }
 </script>
