--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -38,7 +38,7 @@
 <body class="bg-light">
 <nav class="navbar navbar-expand-lg navbar-light mb-4">
     <div class="container">
-        <a class="navbar-brand" href="/">AWS Cognito Demo</a>
+        <a class="navbar-brand" href="/">Cloud Application</a>
         <div class="navbar-nav ms-auto">
             <a class="nav-link" href="/upload">Upload Files</a>
         </div>
