--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -41,6 +41,7 @@
         <div class="navbar-nav ms-auto">
             <a class="nav-link" href="/files" sec:authorize="isAuthenticated()">View Files</a>
             <a class="nav-link" href="/upload" sec:authorize="isAuthenticated()">Upload Files</a>
+            <a class="nav-link" href="/vcs" sec:authorize="isAuthenticated()">File Versions</a>
         </div>
     </div>
 </nav>
