--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -39,9 +39,9 @@
     <div class="container">
         <a class="navbar-brand" href="/">Сloud Application</a>
         <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="/files" sec:authorize="isAuthenticated()">View Files</a>
-            <a class="nav-link" href="/upload" sec:authorize="isAuthenticated()">Upload Files</a>
-            <a class="nav-link" href="/vcs" sec:authorize="isAuthenticated()">File Versions</a>
+            <a class="nav-link" href="/files" >View Files</a>
+            <a class="nav-link" href="/upload" >Upload Files</a>
+            <a class="nav-link" href="/vcs" >File Versions</a>
         </div>
     </div>
 </nav>
